# qr_detector_zbar

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
cmake/: FindZBar.cmake
include/qr_detector_zbar/: qr_detector_zbar.h
launch/: qr_data_publisher.launch
src/: qr_detector.cpp  qr_detector_zbar.cpp
test/: test_qr.cpp
