<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qr_detector_zbar</name>
  <version>0.0.0</version>
  <description>The qr detector package =D</description>

  <maintainer email="r.p.w.appeldoorn@alumnus.tue.nl">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>libopencv-dev</depend>
  
  <depend>rgbd</depend>
  <depend>roscpp</depend>
  
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
